cmake_minimum_required (VERSION 2.8.11)
project(advent-of-code-2019)

add_executable(day1 day1/main.cpp)
add_executable(day2 day2/main.cpp)
add_executable(day3 day3/main.cpp day3/Segment.cpp)
add_executable(day4 day4/main.cpp)
add_executable(day5 day5/main.cpp day5/IntCodeComputer.cpp)
add_executable(day6 day6/main.cpp day6/OrbitalMap.cpp)
find_package(Threads)
add_executable(day7 day7/main.cpp day5/IntCodeComputer.cpp)
target_link_libraries(day7 ${CMAKE_THREAD_LIBS_INIT})
add_executable(day8 day8/main.cpp)
add_executable(day9 day9/main.cpp day5/IntCodeComputer.cpp)